--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,6 @@ spring:
       hibernate:
         format_sql: true
     defer-datasource-initialization: true
+  redis:
+    host: localhost
+    port: 6379
