Feat :: bootjar name 설정 추가

--- a/build.gradle
+++ b/build.gradle
@@ -65,3 +65,7 @@ def generated = 'src/main/genderated'
 sourceSets {
 	main.java.srcDirs += [generated]
 }
+
+bootJar {
+    archiveFileName = 'matie.jar'
+}
