--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,6 @@ spring:
     url: jdbc:mysql://localhost:3306/matie?serverTimezone=UTC
     username: root
     password: 1234
-    initialization-mode: always
   sql:
     init:
       mode: always
@@ -20,6 +19,10 @@ spring:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
     defer-datasource-initialization: true
-  redis:
-    host: localhost
-    port: 6379
+  data:
+    redis:
+      host: localhost
+      port: 6379
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
