--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
     defer-datasource-initialization: true
   data:
     redis:
-      host: localhost
+      host: redis
       port: 6379
   mvc:
     pathmatch:
