fix: test 코드 에러 잠시 주석처리

--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 	finalizedBy 'openapi3' // added
-	outputs.dir snippetsDir
+//	outputs.dir snippetsDir
 }
 
 tasks.named('asciidoctor') {
